--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
+    "babel-loader": "^8.2.4",
     "browser-sync-webpack-plugin": "^2.3.0",
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.7.1",
@@ -21,13 +23,13 @@
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "source-map-loader": "^3.0.1",
-    "webpack": "^5.70.0",
+    "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
     "autoprefixer": "^10.4.4",
     "babel": "^6.23.0",
-    "babel-loader": "^8.2.4",
+    "browser-sync": "^2.27.9",
     "postcss-cli": "^9.1.0"
   }
 }
